--- a/package.json
+++ b/package.json
@@ -4,7 +4,16 @@
   "description": "art review app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "start": "node server/server.js",
+    "build": "NODE_ENV=production webpack",
+    "dev": "NODE_ENV=development webpack serve --open"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "build",
+      "client"
+    ]
   },
   "repository": {
     "type": "git",
@@ -24,6 +33,7 @@
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "express": "^4.18.1",
+    "html-webpack-plugin": "^5.5.0",
     "nodemon": "^2.0.16",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -32,5 +42,9 @@
     "style-loader": "^3.3.1",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
+  },
+  "devDependencies": {
+    "babel-jest": "^28.0.3",
+    "jest": "^28.0.3"
   }
 }
