--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest",
     "start": "node server/server.js",
     "build": "NODE_ENV=production webpack",
-    "dev": "NODE_ENV=development webpack serve --open"
+    "dev": "concurrently \"NODE_ENV=development webpack serve --open\" \"nodemon server/server.js\""
   },
   "nodemonConfig": {
     "ignore": [
