--- a/package.json
+++ b/package.json
@@ -35,9 +35,12 @@
     "css-loader": "^6.7.1",
     "express": "^4.18.1",
     "html-webpack-plugin": "^5.5.0",
+    "immer": "^9.0.12",
     "mongoose": "^6.3.2",
     "nodemon": "^2.0.16",
+    "prop-types": "^15.8.1",
     "react": "^18.1.0",
+    "react-async": "^10.0.1",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
     "redux": "^4.2.0",
