made website very pretty, added fav functionality, and set up backend for star functionality. added star rating display.

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   },
   "devDependencies": {
     "babel-jest": "^28.0.3",
+    "file-loader": "^6.2.0",
     "jest": "^28.0.3",
     "webpack-dev-server": "^4.8.1"
   }
