--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-async": "^10.0.1",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
+    "react-router-dom": "^6.3.0",
     "redux": "^4.2.0",
     "sass": "^1.51.0",
     "sass-loader": "^12.6.0",
